# nix-templates

./: LICENSE  README.md  flake.nix
ml-ops/: .gitignore  README.md  flake.nix  pyproject.toml
python-cuda/: .envrc  README.md  flake.nix  pyproject.toml
python-poetry/: .envrc  README.md  flake.nix
python-poetry2nix/: README.md  flake.nix  override.nix  pyproject.toml
