[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["misumisumi <dragon511southern@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_poetry", from = "src" }]

[tool.poetry.scripts]
# train = "python-poetry.bin.train:main"

[tool.poetry.dependencies]
python = "^3.10"
torch = [
    { version = "^2.1.2+cu118", source = "torch_cu118", markers = "sys_platform == 'linux'" },
    { version = "^2.1.2+cu118", source = "torch_cu118", markers = "sys_platform == 'win32'" },
    { version = "^2.1.2", source = "PyPI", markers = "sys_platform == 'darwin'" },
]
torchaudio = [
    { version = "^2.1.2+cu118", source = "torch_cu118", markers = "sys_platform == 'linux'" },
    { version = "^2.1.2+cu118", source = "torch_cu118", markers = "sys_platform == 'win32'" },
    { version = "^2.1.2", source = "PyPI", markers = "sys_platform == 'darwin'" },
]
torchvision = [
    { version = "^0.16.2+cu118", source = "torch_cu118", markers = "sys_platform == 'linux'" },
    { version = "^0.16.2+cu118", source = "torch_cu118", markers = "sys_platform == 'win32'" },
    { version = "^0.16.2", source = "PyPI", markers = "sys_platform == 'darwin'" },
]
logger = "^1.4"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
tensorboard = "^2.16.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
nbclassic = "^1.0.0"
jupyter-console = "^6.6.3"
debugpy = "^1.8.0"
huggingface-cli = "^0.1"
ipython = "^8.20.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
