[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["misumisumi <dragon511southern@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
hydra-core = "^1.3.2"
librosa = "0.9.2"
nnmnkwii = "^0.1.2"
pysptk = "^0.2.2"
python = ">=3.9,<3.12"
pyworld = "^0.3.4"
setuptools = "^68.2.2"
tensorflow = {version = "2.14", optional = true}
torch = {version="2.0.1", source="torch_cu118"}
torchaudio = {version="2.0.2", source="torch_cu118"}
torchvision = {version="0.15.2", source="torch_cu118"}

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

